--- a/index.html
+++ b/index.html
@@ -441,8 +441,8 @@
     </button>
 
     <!-- Background Music -->
-    <audio id="bgMusic" loop>
-        <source src="https://cdn.pixabay.com/audio/2022/03/10/audio_4a390c717c.mp3" type="audio/mpeg">
+    <audio id="bgMusic" loop preload="auto">
+        <source src="https://files.freemusicarchive.org/storage-freemusicarchive-org/music/no_curator/Kevin_MacLeod/Impact/Kevin_MacLeod_-_01_-_Wallpaper.mp3" type="audio/mpeg">
     </audio>
 
     <script>
@@ -506,16 +506,21 @@
                 music.pause();
                 musicBtn.textContent = '🔇';
                 musicBtn.title = 'Click to play music';
+                isPlaying = false;
             } else {
-                music.play().then(() => {
-                    musicBtn.textContent = '🔊';
-                    musicBtn.title = 'Click to pause music';
-                }).catch(err => {
-                    console.log('Music play failed:', err);
-                    alert('Please click the music button to play');
-                });
+                const playPromise = music.play();
+                if (playPromise !== undefined) {
+                    playPromise.then(() => {
+                        musicBtn.textContent = '🔊';
+                        musicBtn.title = 'Click to pause music';
+                        isPlaying = true;
+                    }).catch(err => {
+                        console.log('Play failed:', err);
+                        musicBtn.textContent = '🔇';
+                        isPlaying = false;
+                    });
+                }
             }
-            isPlaying = !isPlaying;
         }
 
         // Location button
@@ -526,25 +531,7 @@
         // Initialize
         window.addEventListener('load', () => {
             createFloatingHearts();
-            
-            // Try to autoplay (may be blocked by browser)
-            music.play().then(() => {
-                isPlaying = true;
-                musicBtn.textContent = '🔊';
-                musicBtn.title = 'Click to pause music';
-            }).catch(() => {
-                console.log('Autoplay blocked. User interaction needed.');
-            });
         });
-
-        // Add click anywhere to start music (fallback)
-        let firstClick = true;
-        document.body.addEventListener('click', function startMusic() {
-            if (firstClick && !isPlaying) {
-                firstClick = false;
-                toggleMusic();
-            }
-        }, { once: false });
     </script>
 </body>
 </html>
