Fix typo in message paragraph

--- a/index.html
+++ b/index.html
@@ -426,7 +426,7 @@
                 </div>
             </div>
 
-            <p class="message">"Two souls with but a single thought,<br>Side by side,, where every moment shines."</p>
+            <p class="message">"Two souls with but a single thought,<br>Side by side, where every moment shines."</p>
             
             <button class="location-btn" onclick="openLocation()">
                 📍 View Venue Location
