--- a/index.html
+++ b/index.html
@@ -426,7 +426,7 @@
                 </div>
             </div>
 
-            <p class="message">"Two souls, one promise: to walk through this life hand in hand, laughing, learning, and loving our way toward forever."</p>
+            <p class="message">"Two souls, one promise: to journey through life hand in hand, laughing, learning, and loving our way towards forever."</p>
             
             <button class="location-btn" onclick="openLocation()">
                 📍 View Venue Location
